src/snapshots/tests__scan_comment.snap
---
source: src/scanner.rs
expression: res
---
[
    Scanned {
        inner: Comment(
            "some comment",
        ),
        line: 0,
    },
]
