src/snapshots/tests__scan_example.snap
---
source: src/scanner.rs
expression: res
---
[
    RangedObject {
        inner: Rest(
            "(x",
        ),
        range: 0..2,
    },
    RangedObject {
        inner: Rest(
            "<=",
        ),
        range: 3..5,
    },
    RangedObject {
        inner: Rest(
            ">",
        ),
        range: 6..7,
    },
    RangedObject {
        inner: Rest(
            ">=",
        ),
        range: 8..10,
    },
    RangedObject {
        inner: Rest(
            "<",
        ),
        range: 11..12,
    },
    RangedObject {
        inner: Rest(
            "y",
        ),
        range: 13..14,
    },
    RangedObject {
        inner: Rest(
            "99.88l8",
        ),
        range: 15..22,
    },
    RangedObject {
        inner: Rest(
            ")",
        ),
        range: 23..24,
    },
]
