src/snapshots/tests__scan_example_multiline.snap
---
source: src/scanner.rs
expression: res
---
[
    Scanned {
        inner: "(x",
        line: 0,
    },
    Scanned {
        inner: "<=",
        line: 0,
    },
    Scanned {
        inner: ">",
        line: 0,
    },
    Scanned {
        inner: ">=",
        line: 0,
    },
    Scanned {
        inner: "<",
        line: 0,
    },
    Scanned {
        inner: "y",
        line: 0,
    },
    Scanned {
        inner: "99.88l8",
        line: 0,
    },
    Scanned {
        inner: ")",
        line: 0,
    },
    Scanned {
        inner: "x",
        line: 1,
    },
    Scanned {
        inner: ")",
        line: 1,
    },
    Scanned {
        inner: "(",
        line: 1,
    },
    Scanned {
        inner: ">=",
        line: 1,
    },
    Scanned {
        inner: "y",
        line: 1,
    },
]
