src/snapshots/tests__scan_multiline_comment.snap
---
source: src/scanner.rs
expression: res
---
[
    RangedObject {
        inner: Comment(
            "some comment\n which is long! ",
        ),
        range: 0..33,
    },
]
