src/snapshots/tests__scan_problematic.snap
---
source: src/scanner.rs
expression: res
---
[
    Scanned {
        inner: Rest(
            "var",
        ),
        line: 0,
    },
    Scanned {
        inner: Rest(
            "x",
        ),
        line: 0,
    },
    Scanned {
        inner: Str(
            "something",
        ),
        line: 0,
    },
]
